<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="top|center_horizontal"
    android:orientation="vertical"
    android:padding="20dp">

    <!-- Title -->
    <TextView
        android:id="@+id/sampleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/editora"
        android:textColor="@android:color/black"
        android:textSize="30sp"
        android:textStyle="bold" />

    <!-- Save + Open buttons -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnSave"
            android:layout_width="87dp"
            android:layout_height="48dp"
            android:backgroundTint="@color/black"
            android:minWidth="48dp"
            android:minHeight="48dp"
            android:text="@string/save"
            android:textColor="@color/white" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/btnOpen"
            android:layout_width="87dp"
            android:layout_height="48dp"
            android:layout_marginStart="16dp"
            android:backgroundTint="@color/black"
            android:minWidth="48dp"
            android:minHeight="48dp"
            android:text="@string/open"
            android:textColor="@color/white" />
    </LinearLayout>

    <!-- Line numbers panel -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="29dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/word_count"
            android:layout_width="168dp"
            android:layout_height="28dp"
            android:layout_weight="1"
            android:gravity="top"
            android:padding="5dp"
            android:scrollbars="vertical"
            android:text="@string/word_count"
            android:textColor="#888888"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/char_count"
            android:layout_width="128dp"
            android:layout_height="28dp"
            android:gravity="top"
            android:padding="5dp"
            android:scrollbars="vertical"
            android:text="@string/char_count"
            android:textColor="#888888"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/line_count"
            android:layout_width="176dp"
            android:layout_height="28dp"
            android:layout_weight="1"
            android:gravity="top"
            android:padding="5dp"
            android:scrollbars="vertical"
            android:text="@string/line_count"
            android:textColor="#888888"
            android:textSize="14sp" />
    </LinearLayout>

    <!-- Toolbar (Undo, Copy, Paste, Edit, Redo,Find and Replace) -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:background="#DCDCDC"
        android:orientation="horizontal"
        android:padding="4dp">

        <ImageButton
            android:id="@+id/btnUndo"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/undo_desc"
            android:padding="8dp"
            android:src="@drawable/ic_undo" />

        <ImageButton
            android:id="@+id/btnCopy"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/copy_desc"
            android:padding="8dp"
            android:src="@drawable/ic_copy" />

        <ImageButton
            android:id="@+id/btnPaste"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/paste_desc"
            android:padding="8dp"
            android:src="@drawable/ic_paste" />

        <ImageButton
            android:id="@+id/btnEdit"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/edit_desc"
            android:padding="8dp"
            android:src="@drawable/ic_edit" />

        <ImageButton
            android:id="@+id/btnfind_replace"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/find_replace_desc"
            android:padding="8dp"
            android:src="@drawable/ic_findreplace" />

        <ImageButton
            android:id="@+id/btnRedo"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/redo_desc"
            android:padding="8dp"
            android:src="@drawable/ic_redo" />

    </LinearLayout>


    <!-- Main Editor -->

    <!-- Compile + New File buttons -->
    <EditText
        android:id="@+id/editText"
        android:layout_width="333dp"
        android:layout_height="231dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:background="@android:drawable/edit_text"
        android:gravity="top|start"
        android:hint="@string/type_here"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        android:minHeight="48dp"
        android:padding="10dp"
        android:textColor="@android:color/black" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="29dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/language"
            android:layout_width="168dp"
            android:layout_height="28dp"
            android:layout_weight="1"
            android:gravity="top"
            android:padding="5dp"
            android:scrollbars="vertical"
            android:text="@string/language_label"
            android:textColor="#888888"
            android:textSize="14sp" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnCompile"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:backgroundTint="@color/black"
            android:minWidth="48dp"
            android:minHeight="48dp"
            android:text="@string/compile"
            android:textColor="@color/white" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/btnNewFile"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginStart="16dp"
            android:backgroundTint="@color/black"
            android:minWidth="48dp"
            android:minHeight="48dp"
            android:text="@string/new_file"
            android:textColor="@color/white" />
    </LinearLayout>
    <TextView
        android:id="@+id/outputText"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:padding="12dp"
        android:text="@string/output"
        android:textIsSelectable="true"
        android:background="#111111"
        android:textColor="#EEEEEE"
        android:typeface="monospace"
        android:scrollbars="vertical"/>

</LinearLayout>
